--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,8 @@
 <hello name="{{ name }}"></hello>
 <p>
-  Start editing to see some magic happen :)
+	Start editing to see some magic happen :)
+	<br>
+  {{"Contoh menulis di Angular"}}
+	<br>
+  25 + 25 = {{25 + 25}}
 </p>
