--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,4 +5,8 @@
   {{"Contoh menulis di Angular"}}
 	<br>
   25 + 25 = {{25 + 25}}
+
+	<br>
+	<input [(ngModel)]="a" type="text"> + <input [(ngModel)]="b" type="text">
+  = {{a*1+b*1}}
 </p>
